--- a/backend/node-api/package.json
+++ b/backend/node-api/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "type": "module",
   "main": "index.js",
-  "scripts": { "start": "node index.js" },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "pg": "^8.11.3",
-    "ioredis": "^5.4.2"
+    "ioredis": "^5.4.2",
+    "pg": "^8.11.3"
   }
 }
