--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -70,15 +70,17 @@ services:
       - redis
 
   python-ai:
-    build:
-      context: ../backend/python-ai
-    container_name: zai_python_ai
-    ports:
-      - "8000:8000"
-    environment:
-      - MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
-    depends_on:
-      - node-api
+  build:
+    context: ../backend/python-ai
+  container_name: zai_python_ai
+  ports:
+    - "8000:8000"
+  volumes:
+    - "C:/Users/ZK747/Documents:/data"
+  environment:
+    - MODEL_NAME=sentence-transformers/all-MiniLM-L6-v2
+  depends_on:
+    - node-api
 
   react-dashboard:
     build:
